--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@apollo/datasource-rest": "^6.4.1",
     "@apollo/server": "^4.11.3",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "graphql-type-json": "^0.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
